// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chopTreeIntoTable returns expanded rows in a tree 1`] = `
Array [
  Object {
    "cells": Array [
      Object {
        "props": Object {
          "colSpan": 1,
        },
        "title": <strong>
          1st Branch
        </strong>,
      },
    ],
    "isTreeBranch": true,
    "itemId": "1st-branch",
    "props": Object {
      "aria-level": 1,
      "aria-setsize": 2,
      "isExpanded": false,
    },
  },
  Object {
    "cells": Array [
      Object {
        "props": Object {
          "colSpan": 1,
        },
        "title": <strong>
          2nd Branch
        </strong>,
      },
    ],
    "isTreeBranch": true,
    "itemId": "2nd-branch",
    "props": Object {
      "aria-level": 1,
      "aria-setsize": 2,
      "isExpanded": false,
    },
  },
  Object {
    "cells": Array [
      Object {
        "title": "TEST ITEM #7",
      },
    ],
    "itemId": "item-7",
    "props": Object {},
  },
]
`;

exports[`chopTreeIntoTable returns rows in a tree 1`] = `
Array [
  Object {
    "cells": Array [
      Object {
        "props": Object {
          "colSpan": 1,
        },
        "title": <strong>
          1st Branch
        </strong>,
      },
    ],
    "isTreeBranch": true,
    "itemId": "1st-branch",
    "props": Object {
      "aria-level": 1,
      "aria-setsize": 2,
      "isExpanded": false,
    },
  },
  Object {
    "cells": Array [
      Object {
        "props": Object {
          "colSpan": 1,
        },
        "title": <strong>
          2nd Branch
        </strong>,
      },
    ],
    "isTreeBranch": true,
    "itemId": "2nd-branch",
    "props": Object {
      "aria-level": 1,
      "aria-setsize": 2,
      "isExpanded": false,
    },
  },
  Object {
    "cells": Array [
      Object {
        "title": "TEST ITEM #7",
      },
    ],
    "itemId": "item-7",
    "props": Object {},
  },
]
`;

exports[`collectLeaves returns leaves of a specific branch 1`] = `
Array [
  "item-2",
  "item-3",
]
`;

exports[`collectLeaves returns leaves of a specific branch 2`] = `
Array [
  "item-4",
  "item-5",
  "item-6",
]
`;

exports[`collectLeaves returns leaves of a specific branch 3`] = `
Array [
  "item-4",
]
`;

exports[`collectLeaves returns leaves of a specific branch 4`] = `
Array [
  "item-5",
  "item-6",
]
`;

exports[`collectLeaves returns leaves of a specific branch 5`] = `Array []`;

exports[`collectLeaves returns leaves of all branches 1`] = `
Array [
  "item-1",
  "item-2",
  "item-3",
  "item-4",
  "item-5",
  "item-6",
]
`;
